# SpendSense

./: .gitignore  ARCHITECTURE.md  README.md  analytics.py  categorize_all.py  config.py  db.py  llm_client.py  migrate_sqlite_to_postgres.py  pdf_to_csv.py  pyproject.toml  requirements.txt  spendsense.db  transactions_loader.py
alembic/: env.py
alembic/versions/: 3d12f4ed5370_rename_merchant_clean_to_merchant.py  ad4bf6697a81_create_statements_and_transactions.py
data/: categorized_transactions.csv  transactions.csv
scripts/: README.md  __init__.py  analytics.py  categorize.py  migrate_db.py  process_and_categorize.py  process_pdf.py
spendsense/: __init__.py  categories.py  dates.py  prompts.py  transactions_io.py
spendsense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spendsense/config/: __init__.py  settings.py
spendsense/core/: __init__.py  constants.py
spendsense/db/: __init__.py  repository.py  session.py
spendsense/io/: __init__.py  csv.py
spendsense/models/: __init__.py  statement.py  transaction.py
spendsense/services/: __init__.py  llm.py  ocr.py  pdf_processor.py  prompts.py
spendsense/utils/: __init__.py  dates.py  hashing.py  merchant.py
tests/: __init__.py  test_ocr.py
